--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,12 @@
       "css": ["css/bootstrap.min.css", "css/content_script.css"],
       "js": ["js/lib/jquery-1.8.1.js", "js/content_script.js"]
     }
+  ],
+  "background": {
+    "scripts": ["js/background.js"]
+  },
+  "permissions": [
+    "webRequest",
+    "http://*.wikipedia.org/*"
   ]
 }
